# dota-grid-generator

./: README.md  pyproject.toml
src/dota_meta_hero_grid_generator/: args.py  config.py  main.py  stratz_api.py  utils.py
src/dota_meta_hero_grid_generator/builders/: hero_grid.py
src/dota_meta_hero_grid_generator/processors/: hero_data.py
tests/: test_stratz_api.py
