[project]
name = "dota-meta-hero-grid-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stepan Ponomarev", email = "stponomarevw@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
dota-meta-hero-grid-generator = "dota_meta_hero_grid_generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
